force-app/main/default/objects/PartsShipment__c/PartsShipment__c.object-meta.xml
<CustomObject>
    <label>PartsShipment</label>
    <pluralLabel>PartsShipments</pluralLabel>
    <nameField>
        <label>PartsShipment Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>