force-app/main/default/objects/PartsShipment__c/fields/AMOS_Case_No__c.field-meta.xml
<CustomField>
    <fullName>AMOS_Case_No__c</fullName>
    <label>AMOS Case No</label>
    <length>12</length>
    <type>Text</type>
</CustomField>