force-app/main/default/objects/PartsShipment__c/fields/AMOS_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>AMOS_Order_Number__c</fullName>
    <label>AMOS Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>