force-app/main/default/objects/PartsShipment__c/fields/AMOS_Picking_No__c.field-meta.xml
<CustomField>
    <fullName>AMOS_Picking_No__c</fullName>
    <label>AMOS Picking No</label>
    <length>12</length>
    <type>Text</type>
</CustomField>