force-app/main/default/objects/PartsShipment__c/fields/AMOS_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>AMOS_Ref_Number__c</fullName>
    <label>AMOS Ref Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>