force-app/main/default/objects/PartsShipment__c/fields/CurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyIsoCode__c</fullName>
    <label>CurrencyIsoCode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GBP - British Pound</fullName>
            </value>
            <value>
                <fullName>EUR - Euro</fullName>
            </value>
            <value>
                <fullName>CHF - Swiss Franc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>