force-app/main/default/objects/PartsShipment__c/fields/Dealer_Internal_Memo__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Internal_Memo__c</fullName>
    <label>Dealer Internal Memo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>