force-app/main/default/objects/PartsShipment__c/fields/Dealer_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Order_No__c</fullName>
    <label>Dealer Order No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>