force-app/main/default/objects/PartsShipment__c/fields/Discount_Group__c.field-meta.xml
<CustomField>
    <fullName>Discount_Group__c</fullName>
    <label>Discount Group</label>
    <length>2</length>
    <type>Text</type>
</CustomField>