force-app/main/default/objects/PartsShipment__c/fields/MOBIS_Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>MOBIS_Dealer_Code__c</fullName>
    <label>MOBIS Dealer Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>