force-app/main/default/objects/PartsShipment__c/fields/Order_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Order_Suffix__c</fullName>
    <label>Order Suffix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>