force-app/main/default/objects/PartsShipment__c/fields/Ordered_Part_No__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Part_No__c</fullName>
    <label>Ordered Part No</label>
    <length>18</length>
    <type>Text</type>
</CustomField>