force-app/main/default/objects/PartsShipment__c/fields/Ordered_Part_Qty__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Part_Qty__c</fullName>
    <label>Ordered Part Qty</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>