force-app/main/default/objects/PartsShipment__c/fields/Parts_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Parts_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parts Order Line Item</label>
    <referenceTo>Parts_Order_Line_Item__c</referenceTo>
    <relationshipLabel>PartsShipment</relationshipLabel>
    <relationshipName>PartsShipment</relationshipName>
    <type>Lookup</type>
</CustomField>