force-app/main/default/objects/PartsShipment__c/fields/Parts_Order_Line_No__c.field-meta.xml
<CustomField>
    <fullName>Parts_Order_Line_No__c</fullName>
    <label>Parts Order Line No</label>
    <length>4</length>
    <type>Text</type>
</CustomField>