force-app/main/default/objects/PartsShipment__c/fields/Parts_Shipment_Number__c.field-meta.xml
<CustomField>
    <fullName>Parts_Shipment_Number__c</fullName>
    <displayFormat>PS-{00000}</displayFormat>
    <label>Parts Shipment Number</label>
    <type>AutoNumber</type>
</CustomField>