force-app/main/default/objects/PartsShipment__c/fields/Receive_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Receive_Quantity__c</fullName>
    <label>Receive Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>