force-app/main/default/objects/PartsShipment__c/fields/Shipped_Part_No__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Part_No__c</fullName>
    <label>Shipped Part No</label>
    <length>18</length>
    <type>Text</type>
</CustomField>