force-app/main/default/objects/PartsShipment__c/fields/Shipped_Part_Qty__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Part_Qty__c</fullName>
    <label>Shipped Part Qty</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>