force-app/main/default/objects/PartsShipment__c/fields/Shipping_Product__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>PartsShipment</relationshipLabel>
    <relationshipName>PartsShipment</relationshipName>
    <type>Lookup</type>
</CustomField>