force-app/main/default/objects/PartsShipment__c/fields/Shipping_Type__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Type__c</fullName>
    <label>Shipping Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>